// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages > dashboard > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <h1
        class="govuk-heading-xl"
      >
        Test Org disruptions data
      </h1>
      <a
        class="govuk-button govuk-button--start"
        data-module="govuk-button"
        draggable="false"
        href="/create-disruption/acde070d-8c4c-4f0d-9d8a-162843c10333"
        id="create-new-button"
        role="button"
      >
        Create new disruption
        <svg
          class="govuk-button__start-icon"
          focusable="false"
          height="19"
          role="presentation"
          viewBox="0 0 33 40"
          width="17.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h13l20 20-20 20H0l20-20z"
            fill="currentColor"
          />
        </svg>
      </a>
      <div
        class="govuk-tabs"
        data-module="govuk-tabs"
      >
        <h2
          class="govuk-tabs__title"
        >
          Disruptions
        </h2>
        <ul
          class="govuk-tabs__list"
        >
          <li
            class="govuk-tabs__list-item govuk-tabs__list-item--selected"
          >
            <a
              class="govuk-tabs__tab"
              href="#live"
            >
              Live
            </a>
          </li>
          <li
            class="govuk-tabs__list-item"
          >
            <a
              class="govuk-tabs__tab"
              href="#upcoming"
            >
              Upcoming
            </a>
          </li>
          <li
            class="govuk-tabs__list-item"
          >
            <a
              class="govuk-tabs__tab"
              href="#recently-closed"
            >
              Recently closed
            </a>
          </li>
        </ul>
        <div
          class="govuk-tabs__panel"
          id="live"
        >
          <table
            class="govuk-table"
          >
            <caption
              class="govuk-table__caption govuk-table__caption--l"
            >
              Live disruptions
            </caption>
            <thead
              class="govuk-table__head"
            >
              <tr
                class="govuk-table__row"
              >
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  ID
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              class="govuk-table__body"
            />
          </table>
        </div>
        <div
          class="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="upcoming"
        >
          <table
            class="govuk-table"
          >
            <caption
              class="govuk-table__caption govuk-table__caption--l"
            >
              Upcoming disruptions
            </caption>
            <thead
              class="govuk-table__head"
            >
              <tr
                class="govuk-table__row"
              >
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  ID
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              class="govuk-table__body"
            />
          </table>
        </div>
        <div
          class="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="recently-closed"
        >
          <table
            class="govuk-table"
          >
            <caption
              class="govuk-table__caption govuk-table__caption--l"
            >
              Closed disruptions
            </caption>
            <thead
              class="govuk-table__head"
            >
              <tr
                class="govuk-table__row"
              >
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  ID
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              class="govuk-table__body"
            />
          </table>
        </div>
      </div>
      <a
        class="govuk-link"
        href="/view-all-disruptions"
      >
        <h2
          class="govuk-heading-s text-govBlue"
        >
          View all disruptions
        </h2>
      </a>
      <a
        class="govuk-link"
        href="/view-all-social-media"
      >
        <h2
          class="govuk-heading-s text-govBlue"
        >
          View all social media
        </h2>
      </a>
      <a
        class="govuk-link"
        href="/view-all-disruptions?draft=true"
      >
        <h2
          class="govuk-heading-s text-govBlue"
        >
          Draft disruptions
        </h2>
      </a>
      <a
        class="govuk-link"
        href="/view-all-templates"
      >
        <h2
          class="govuk-heading-s text-govBlue"
        >
          Templates
        </h2>
      </a>
      <a
        class="govuk-link"
        href="/view-all-roadworks"
      >
        <h2
          class="govuk-heading-s text-govBlue"
        >
          Create disruptions from roadworks in your area
        </h2>
      </a>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages > dashboard > should render correctly for an operator user 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <h1
        class="govuk-heading-xl"
      >
        Test Org disruptions data
      </h1>
      <a
        class="govuk-button govuk-button--start"
        data-module="govuk-button"
        draggable="false"
        href="/create-disruption/acde070d-8c4c-4f0d-9d8a-162843c10333"
        id="create-new-button"
        role="button"
      >
        Create new disruption
        <svg
          class="govuk-button__start-icon"
          focusable="false"
          height="19"
          role="presentation"
          viewBox="0 0 33 40"
          width="17.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h13l20 20-20 20H0l20-20z"
            fill="currentColor"
          />
        </svg>
      </a>
      <div
        class="govuk-tabs"
        data-module="govuk-tabs"
      >
        <h2
          class="govuk-tabs__title"
        >
          Disruptions
        </h2>
        <ul
          class="govuk-tabs__list"
        >
          <li
            class="govuk-tabs__list-item govuk-tabs__list-item--selected"
          >
            <a
              class="govuk-tabs__tab"
              href="#live"
            >
              Live
            </a>
          </li>
          <li
            class="govuk-tabs__list-item"
          >
            <a
              class="govuk-tabs__tab"
              href="#upcoming"
            >
              Upcoming
            </a>
          </li>
          <li
            class="govuk-tabs__list-item"
          >
            <a
              class="govuk-tabs__tab"
              href="#recently-closed"
            >
              Recently closed
            </a>
          </li>
        </ul>
        <div
          class="govuk-tabs__panel"
          id="live"
        >
          <table
            class="govuk-table"
          >
            <caption
              class="govuk-table__caption govuk-table__caption--l"
            >
              Live disruptions
            </caption>
            <thead
              class="govuk-table__head"
            >
              <tr
                class="govuk-table__row"
              >
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  ID
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              class="govuk-table__body"
            />
          </table>
        </div>
        <div
          class="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="upcoming"
        >
          <table
            class="govuk-table"
          >
            <caption
              class="govuk-table__caption govuk-table__caption--l"
            >
              Upcoming disruptions
            </caption>
            <thead
              class="govuk-table__head"
            >
              <tr
                class="govuk-table__row"
              >
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  ID
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              class="govuk-table__body"
            />
          </table>
        </div>
        <div
          class="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="recently-closed"
        >
          <table
            class="govuk-table"
          >
            <caption
              class="govuk-table__caption govuk-table__caption--l"
            >
              Closed disruptions
            </caption>
            <thead
              class="govuk-table__head"
            >
              <tr
                class="govuk-table__row"
              >
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  ID
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  class="govuk-table__header align-middle px-2"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              class="govuk-table__body"
            />
          </table>
        </div>
      </div>
      <a
        class="govuk-link"
        href="/view-all-disruptions"
      >
        <h2
          class="govuk-heading-s text-govBlue"
        >
          View all disruptions
        </h2>
      </a>
      <a
        class="govuk-link"
        href="/view-all-social-media"
      >
        <h2
          class="govuk-heading-s text-govBlue"
        >
          View all social media
        </h2>
      </a>
      <a
        class="govuk-link"
        href="/view-all-disruptions?draft=true"
      >
        <h2
          class="govuk-heading-s text-govBlue"
        >
          Draft disruptions
        </h2>
      </a>
      <a
        class="govuk-link"
        href="/view-all-roadworks"
      >
        <h2
          class="govuk-heading-s text-govBlue"
        >
          View roadworks in your area
        </h2>
      </a>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
